--- a/styles/search.css
+++ b/styles/search.css
@@ -1,11 +1,12 @@
 body #img-div {
-  height: 100%; }
+  height: 100%;
+  width: 100%; }
 
 body #search-page {
   top: 0%;
   position: absolute;
   text-align: left;
-  margin: 350px 0px 0px 245px;
+  margin: 350px 0px 0px 190px;
   background-color: rgba(0, 0, 0, 0.535);
   box-shadow: 0px 1px 10px white;
   border-radius: 5px;
@@ -40,7 +41,7 @@ body #search-page {
   body #book-image {
     height: 650px; }
   body #search-page {
-    margin: 180px 0px 0px 140px;
+    margin: 250px 0px 0px 140px;
     width: 500px;
     height: 45px; }
     body #search-page input[type=text] {
@@ -55,7 +56,7 @@ body #search-page {
   body #book-image {
     height: 500px; }
   body #search-page {
-    margin: 170px 0px 0px 120px;
+    margin: 190px 0px 0px 120px;
     width: 500px;
     height: 45px; }
     body #search-page input[type=text] {
@@ -106,9 +107,9 @@ body #search-page {
 
 @media (max-width: 415px) {
   body #book-image {
-    height: 460px; }
+    height: 700px; }
   body #search-page {
-    margin: 180px 0px 0px 55px;
+    margin: 250px 0px 0px 65px;
     width: 290px;
     height: 40px; }
     body #search-page input[type=text] {
@@ -120,9 +121,9 @@ body #search-page {
 
 @media (max-width: 375px) {
   body #book-image {
-    height: 450px; }
+    height: 600px; }
   body #search-page {
-    margin: 180px 0px 0px 33px;
+    margin: 250px 0px 0px 40px;
     width: 290px;
     height: 40px; }
     body #search-page input[type=text] {
