--- a/styles/sunday.scss
+++ b/styles/sunday.scss
@@ -4,60 +4,60 @@ $fontManrope : manrope, sans-serif;
 $fontOpenSans : open-sans, sans-serif;
 
 body{
-    #content{
-        #left-logo{
-            .hamburger{
-                #header-menu{
-                    li a{
-                        color: black;
-                        font-weight: 900;
-                    }
+    .content{
+        .top-nav {
+            .right{
+                a {
+                    color: #000000;
+                    font-weight: 900;
                 }
             }
         }
     }
 
-    #search-screen-img{
+    .search-screen-img{
         height: 100%;
     }
-    #sunday-page{
+    .sunday-page{
         position: absolute;
         top: 165px;
         width: 100%;
 
-        .demo{
+        h1{
             text-align: center;
             width: 100%;
-            // font-weight: bolder;
             font-family: $fontMonstserrat;
             font-weight: bold;
             font-size: 50px;
-            color: #231F20;
+            color: #000000;
+            margin-bottom: 40px;
         }
 
         .clearfix{
             content: '';
             clear: both;
             display: table;
-            width: 100%;
+            width: 90%;
+            margin: auto;
 
             .left{
                 float: left;
                 width: 28%;
-                margin-left: 40px;
 
                 h4{
                     font-family: $fontMonstserrat;
                     font-size: 15px;
                     font-weight: 900;
                     margin-top: 20px;
+                    color: #000000;
                 }
                 #search-title{
                     background-color: white;
                     border: 1px solid #999AA3;
+                    font-family: $fontMonstserrat;
                     box-shadow: 0px 1px 15px #516AA4;
                     width: 300px;
-                    padding: 6px 0px;
+                    padding: 4px 0px;
                     border-radius: 5px;
                     height: 44px;
                    
@@ -107,15 +107,53 @@ body{
                     clear: both;
                     display: table;
                     width: 100%;
-                    margin-top: 30px;
+                    margin-top: 15px;
 
                     .right-left{
+                        margin-top: 12px;
                         float: left;
                         width: 300px;
+                        font-family: $fontMonstserrat;
                     }
                     .right-right{
                         float: right;
-                        width: 150px;
+                        width: 170px;
+                        font-family: $fontMonstserrat;
+                        display: inline;
+
+                        ul{
+                            list-style-type: none;
+                            margin: 0%;
+                            padding: 0%;
+
+                            li{
+                                display: inline;
+                                margin: 0px 5px;
+                                text-align: center;
+
+                                img{
+                                    width: 22px;
+                                    height: 22px;
+                                }
+
+                                a{
+                                    font-size: 20px;
+                                    text-decoration: none;
+                                    color: #000000;
+                                }
+
+                                .num-high-light{
+                                    font-size: 29px;
+                                    font-weight: bold;
+                                    color: #00000069;
+
+                                }
+
+                                .rotate-img{
+                                    transform: rotateZ(180deg);
+                                }
+                            }
+                        }
                     }
                 }
 
@@ -123,31 +161,30 @@ body{
                     height: 100px;
 
                     .sep{
-                        padding: 15px;
+                        padding: 15px 15px 15px 25px;
                         background-color: white;
-                        width: 94%;
                         height: 85px;
                         display: flex;
                         flex-direction: row;
                         border-radius: 10px;
+                        font-family: $fontMonstserrat;
 
                         .sep-one{
                             float: left;
-                            width: 200px;
+                            width: 210px;
 
                             h2{
                                 font-size: 20px;
-                                font-weight: bolder;
-                                margin: 0%;
+                                font-weight: 600;
                                 text-align: left;
-                                color: #231F20;
+                                color: #000000;
                             }
                         }
                         .sep-two{
-                            width: 500px;
+                            width: 365px;
                         }
                         .sep-three{
-                            width: 180px;
+                            width: 175px;
                             display: flex;
                             flex-direction: row;
 
@@ -156,6 +193,7 @@ body{
                                 margin: 7px;
                                 box-shadow: 0px 1px 10px #7D419C;
                                 border-radius: 5px;
+                                cursor: pointer;
 
                                 img{
                                     width: 30px;
@@ -167,99 +205,221 @@ body{
             }
         }
     }
+    .pagination{
+        width: 150px;
+        margin: auto;
+        ul{
+            list-style-type: none;
+            margin: 0%;
+            padding: 0%;
+
+            li{
+                display: inline;
+                margin: 0px 5px;
+                text-align: center;
+
+                img{
+                    width: 22px;
+                    height: 22px;
+                }
+
+                a{
+                    font-size: 20px;
+                    text-decoration: none;
+                    color: #000000;
+                }
+
+                .num-high-light{
+                    font-family: $fontMonstserrat;
+                    font-size: 29px;
+                    font-weight: bold;
+                    color: #00000069;
+                }
+
+                .rotate-img{
+                    transform: rotateZ(180deg);
+                }
+            }
+        }
+    }
 }
 
 @media (max-width:1024px){
-   body{
-
-    #search-screen-img{
-        height: 2000px;
-    }
-
-    #sunday-page{
-        .demo{
-            font-size: 45px;
+    body{
+        .search-screen-img{
+            height: 1880px;
         }
-
-        .clearfix{
-            .left{
-                margin-left: 30px;
-
-                h4{
-                    font-size: 15px;
-                }
-                #search-title{
-                    width: 270px;
-                    i{
-                        margin: 0px 8px;
-                    }
-                    input{
-                        height: 30px;
-                        width: 200px;
-
-                    }
-                }
-
-                .search-speaker{
-                    select{
-                        width: 270px;
-                    }
-                }
-
-                .search-date{
-                    select{
-                        width: 270px;
-                    }
-                }
+        .sunday-page{
+            h1{
+                margin-bottom: 30px;
             }
-
-            .right{
-                float: right;
-                width: 60%;
-
-                .right-clearfix{
-                    margin-top: 15px;
-
-                    .right-left{
-                        float: left;
-                        width: 300px;
+            .clearfix{
+                .left{
+                    h4{
+                        font-size: 14px;
+                        margin-top: 10px;
                     }
-                    .right-right{
-                        float: right;
-                        width: 150px;
-                    }
-                }
-
-                .search-titles{
-                    height: 100px;
-
-                    .sep{
-                        .sep-one{
-                            width: 180px;
-                            h2{
-                                font-size: 16px;
-                            }
+                    #search-title{
+                        width: 250px;
+                        height: 40px;
+                    
+                        i{
+                            margin: 0px 10px;
                         }
-                        .sep-two{
+                        input{
+                            border: none;
+                            outline: none;
+                            height: 33px;
                             width: 200px;
                         }
-                        .sep-three{
-                            width: 180px;
+                    }
 
-                            .media-icon-div{
-                                height: 35px;
-                                padding: 3px 7px;
-                                img{
-                           
-                                    width: 20px;
+                    .search-speaker{
+                        select{
+                            width: 250px;
+                            height: 40px;
+                        }
+                    }
+
+                    .search-date{
+                        select{
+                            width: 250px;
+                            height: 40px;
+                        }
+                    }
+                }
+
+                .right{
+                    .right-clearfix{
+                        margin-top: 0px;
+                    }
+
+                    .search-titles{
+                        height: 100px;
+
+                        .sep{
+                            height: 80px;
+                            .sep-one{
+                                width: 250px;
+
+                                h2{
+                                    font-size: 17px;
+                                }
+                                p{
+                                    font-size: 14px;
+                                }
+                            }
+                            .sep-two{
+                                width: 333px;
+                                p{
+                                    font-size: 14px;
+                                }
+                            }
+                            .sep-three{
+                                width: 175px;
+
+                                .media-icon-div{
+                                    img{
+                                        width: 25px;
+                                    }
                                 }
                             }
                         }
                     }
                 }
             }
-        }
+        }  
     }
-   }
 }
 
+@media (max-width:768px){
+    body{
+        .search-screen-img{
+            height: 1880px;
+        }
+        .sunday-page{
+            h1{
+                margin-bottom: 30px;
+            }
+            .clearfix{
+                .left{
+                    display: none;
+                    h4{
+                        font-size: 14px;
+                        margin-top: 10px;
+                    }
+                    #search-title{
+                        width: 250px;
+                        height: 40px;
+                    
+                        i{
+                            margin: 0px 10px;
+                        }
+                        input{
+                            border: none;
+                            outline: none;
+                            height: 33px;
+                            width: 200px;
+                        }
+                    }
+
+                    .search-speaker{
+                        select{
+                            width: 250px;
+                            height: 40px;
+                        }
+                    }
+
+                    .search-date{
+                        select{
+                            width: 250px;
+                            height: 40px;
+                        }
+                    }
+                    .search-icon{
+                        display: none;
+                    }
+                }
+
+                .right{
+                    .right-clearfix{
+                        margin-top: 0px;
+                    }
+
+                    .search-titles{
+                        height: 100px;
+
+                        .sep{
+                            height: 80px;
+                            .sep-one{
+                                width: 250px;
+
+                                h2{
+                                    font-size: 17px;
+                                }
+                                p{
+                                    font-size: 14px;
+                                }
+                            }
+                            .sep-two{
+                                width: 333px;
+                                p{
+                                    font-size: 14px;
+                                }
+                            }
+                            .sep-three{
+                                width: 175px;
+
+                                .media-icon-div{
+                                    img{
+                                        width: 25px;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }  
+    }
+}
